# Chip8

./: .gitignore  Cargo.toml  README.md  TODO  makefile
old/: index.html
old/app/: app.component.ts
pkg/: package.json
src/: cpu.rs  gpu.rs  graphics.rs  io.rs  keypad.rs  lib.rs  main.rs  roms.rs  wasm.rs
web/: README.md  angular.json  index.html  index.js  package.json  styles.css  tsconfig.json  webpack.config.js
web/e2e/src/: app.e2e-spec.ts  app.po.ts
web/src/: index.html  styles.scss
web/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  wasm-service.ts
web/wasm/: chip8.d.ts  chip8.js  chip8_bg.wasm
www/: package.json  tsconfig.json
www/src/: tslint.json
www/src/app/: app.component.html  app.component.scss  app.component.ts
