[package]
name = "chip8"
version = "0.1.0"
authors = ["Roman Kolacz <roman@kolacz.io>"]

[dependencies]
rand = "0.5"
log = "0.4"
env_logger = "0.5.13"
wasm-bindgen = "0.2"
js-sys = "0.3.2"
lazy_static = "1.1.0"
console_error_panic_hook = "0.1.5"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.2"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console'
]

[profile.release]
debug = true
