[package]
name = "chip8"
version = "0.1.0"
authors = ["Roman Kolacz <roman@kolacz.io>"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
log = "0.4"
wee_alloc = { version = "0.4.2", optional = true }
rand = "0.5"
env_logger = "0.5.13"
wasm-bindgen = "0.2"
js-sys = "0.3.2"
lazy_static = "1.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies.web-sys]
version = "0.3.2"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# TODO delete this
debug = true
# optimise for small code size
opt-level = "s"
